# SnakeGame

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
source/app/: CMakeLists.txt  main.cpp
source/app/Game/: Game.cpp  Game.h  GameState.cpp  GameState.h
source/core/: CMakeLists.txt
source/core/include/: Board.h  Command.h  GameConstants.h  IFood.h  IObject.h  InputHandler.h  Snake.h  Utilities.h
source/core/src/: Board.cpp  Command.cpp  IFood.cpp  IObject.cpp  InputHandler.cpp  Snake.cpp  Utilities.cpp
source/render/: CMakeLists.txt
source/render/include/: Button.h  GameUI.h  RenderBoard.h  RenderFood.h  RenderSnake.h
source/render/src/: Button.cpp  GameUI.cpp  RenderBoard.cpp  RenderFood.cpp  RenderSnake.cpp
tests/: CMakeLists.txt  TestBoard.cpp  TestIFood.cpp  TestSnake.cpp
